# job-search-buddy

./: .env.dist  .gitignore  LICENCE  pyproject.toml
notebooks/: cv_customization.ipynb  experiment.ipynb  sample.json
src/: initialize.py
src/agents/: jobs.py
src/components/: customizers.py  emails.py  loaders.py  persistence.py  retrievers.py  scanners.py  validators.py
src/tools/: emails.py  jobs.py
src/utils/: clients.py  config.py  types.py
